# mt.sniper

./: CMakeLists.txt  EDM.cmake  RootDict.cmake  run-MtAna.py
CoAnalysis/: CMakeLists.txt
CoAnalysis/DummySrc/: DummyFillFGBufAlg.cc
CoAnalysis/python/CoAnalysis/: __init__.py
CoAnalysis/share/: run.py
CoAnalysis/src/: InputFragAlg.cc  PackFragAlg.cc  ReadFragBufStream.cc  ReadFragBufStream.h  ThrdInputSvc.cc  ThrdInputSvc.h  UserGlobalStream.cc
MtIOExample/: CMakeLists.txt
MtIOExample/cmt/: requirements
MtIOExample/python/: MtIOExample.py
MtIOExample/share/: run-Compatible.py  run-MtIO.py  run.py
MtIOExample/src/: BeginEvtHdl.cc  BeginEvtHdl.h  CompatibleTest.cc  DummyEvent.cc  DummyEvent.h  DummyIOAlg.cc  DummyIOAlg.h  DummyInputSvc.cc  DummyInputSvc.h  DummyMemMgr.cc  DummyMemMgr.h  DummyOutputSvc.cc  DummyOutputSvc.h  DummyStore.cc  DummyStore.h  EndEvtHdl.cc  EndEvtHdl.h  FillGBufAlg.cc  WriteGBufAlg.cc
OECEvent/: CMakeLists.txt
OECEvent/Event/: OECEvent.h  OECHeader.h
OECEvent/cmt/: requirements
OECEvent/src/: LinkDef.h  OECEvent.cc  OECEventBook.cc  OECEventLinkDef.h  OECHeader.cc  OECHeaderLinkDef.h
SniperMuster/: CMakeLists.txt
SniperMuster/SniperMuster/: Fragment.h  GlobalBuffer.h  GlobalStream.h  GlobalStream4Any.h  GlobalStreamBase.h  GlobalStreamFactory.h  MtDagTask.h  ThreadAssistor.h
SniperMuster/SniperPrivate/: GlobalStreamBase.h
SniperMuster/cmt/: requirements
SniperMuster/python/SniperMuster/: __init__.py
SniperMuster/share/: run-MtAlgDepGraph.py  run-MusterTest.py
SniperMuster/src/: GlobalBuffer.cc  GlobalStream.cc  GlobalStream.h  GlobalStream4Any.cc  GlobalStreamBase.cc  GlobalStreamExp.cc  GlobalStreamFactory.cc  ModuleDef.cc  MtDagTask.cc  Muster.cc  Muster.h  MusterContext.cc  MusterContext.h  SniperMuster.cc  SniperTbbTask.cc  SniperTbbTask.h  SyncAssistor.cc  SyncAssistor.h  TaskSupervisor.cc  TaskSupervisor.h  ThreadAssistor.cc  ThreadAssistor.h
cmake/: MtSNiPERConfig.cmake.in  MtSNiPERCreateConfig.cmake  mt.sniper-setup.sh.in
cmt/: project.cmt
